--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,11 +7,14 @@
        - run:
            name: Deploy Over SSH
            command: |
-             hostname
              ssh $SSH_USER@$SSH_HOST "hostname"
+             hostname
+       - run:
+            name: Deploy Over SSH2
+            command: |
              ssh $SSH_USER@$SSH_HOST_PRIVATE "touch text.text"
+             hostname
              touch text.text
-             echo All Good
  workflows:
    version: 2
    build-and-deploy:
