--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,6 +3,7 @@
    deploy:
      machine:
        enabled: true
+     working_directory: ~/
      steps:
        - checkout
        - run:
@@ -10,7 +11,7 @@
            command: |
              ls
              mkdir hello
-             scp -r ~/hello SSH_USER@$SSH_HOST:/home/ubuntu 
+             scp -r ~/hello "SSH_USER@$SSH_HOST:/home/ubuntu/"" 
              ssh $SSH_USER@$SSH_HOST
              hostname
        - run:
