--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,17 +8,13 @@
        - run:
            name: Deploy Over SSH
            command: |
-             ls
-             mkdir hello
-             scp -r ~/hello "SSH_USER@$SSH_HOST:/home/ubuntu/"
-             ssh $SSH_USER@$SSH_HOST
-             hostname
+             ssh $SSH_USER@$SSH_HOST "hostname"
+             
        - run:
             name: Deploy Over SSH2
             command: |
-             ssh $SSH_USER@$SSH_HOST_PRIVATE
-             hostname
-             touch text.text
+             ssh $SSH_USER@$SSH_HOST "hostname"
+             ssh $SSH_USER@$SSH_HOST "$SSH_USER@$SSH_HOST_PRIVATE "hostname""
  workflows:
    version: 2
    build-and-deploy:
