--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,17 +8,8 @@
        - run:
            name: Deploy Over SSH
            command: |
-             ssh $SSH_USER@$SSH_HOST
-             hostname
-             SSH_USER@$SSH_HOST_PRIVATE
-             hostname
-             exit
-             exit
-       - run:
-            name: Deploy Over SSH2
-            command: |
              ssh $SSH_USER@$SSH_HOST "hostname"
-             ssh $SSH_USER@$SSH_HOST "$SSH_USER@$SSH_HOST_PRIVATE "hostname""
+             ssh $SSH_USER@$SSH_HOST | ssh SSH_USER@$SSH_HOST_PRIVATE "hostname"
  workflows:
    version: 2
    build-and-deploy:
