--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,7 +7,8 @@
      steps:
        - checkout
        - run: pwd
-       - run: ls
+       - run: ls #
+       - run: scp ./README.md "$SSH_USER@$SSH_HOST"
        - run:
            name: Deploy Over SSH
            command: |
