--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,7 +8,7 @@
        - checkout
        - run: pwd
        - run: ls #
-       - run: scp ./README.md "$SSH_USER@$SSH_HOST"
+       - run: scp ./README.md "$SSH_USER@$SSH_HOST:/home/$SSH_USER" # for ansible from checkout
        - run:
            name: Deploy Over SSH
            command: |
