--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,11 +9,12 @@
        - run: pwd
        - run: ls #
        - run: scp ./README.md "$SSH_USER@$SSH_HOST:/home/$SSH_USER" # for ansible from checkout
+       - run: ssh $SSH_USER@$SSH_HOST "hostname"
+       - run: ssh SSH_USER@$SSH_HOST_PRIVATE "hostname"
        - run:
            name: Deploy Over SSH
            command: |
-             ssh $SSH_USER@$SSH_HOST "hostname"
-             ssh $SSH_USER@$SSH_HOST | ssh SSH_USER@$SSH_HOST_PRIVATE "hostname"
+             ssh $SSH_USER@$SSH_HOST "hostname" # ssh SSH_USER@$SSH_HOST_PRIVATE "hostname"
  workflows:
    version: 2
    build-and-deploy:
