--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,7 +10,7 @@
        - run: ls #
        - run: scp -r ./ansible "$SSH_USER@$SSH_HOST:/home/$SSH_USER" # for ansible from checkout
        - run: ssh $SSH_USER@$SSH_HOST "hostname"
-       - run: ssh $SSH_USER@$SSH_HOST "ansible dev -m command -a 'hostname'"
+       - run: ssh $SSH_USER@$SSH_HOST "ansible-playbook /home/ubuntu/playbook.yaml"
 
  workflows:
    version: 2
@@ -20,3 +20,4 @@
            filters:
              branches:
                only: main # only deploy on the main branch
+# ssh $SSH_USER@$SSH_HOST "ansible dev -m command -a 'hostname'"
