--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,7 +10,7 @@
        - run: ls #
        - run: scp -r ./ansible "$SSH_USER@$SSH_HOST:/home/$SSH_USER" # for ansible from checkout
        - run: ssh $SSH_USER@$SSH_HOST "hostname"
-       - run: ssh $SSH_USER@$SSH_HOST "ansible dev -i /home/ubuntu/ansible/inventory -m file -a 'path=/home/ubuntu/ubuntu_test.txt state=touch'"
+       - run: ssh $SSH_USER@$SSH_HOST "ansible all -i inventory -m ping"
 
  workflows:
    version: 2
@@ -22,3 +22,4 @@
                only: main # only deploy on the main branch
 # ssh $SSH_USER@$SSH_HOST "ansible dev -m command -a 'hostname'"
 # - run: ssh $SSH_USER@$SSH_HOST "ansible-playbook /home/ubuntu/ansible/playbook.yaml"
+# - run: ssh $SSH_USER@$SSH_HOST "ansible dev -i /home/ubuntu/ansible/inventory -m file -a 'path=/home/ubuntu/ubuntu_test.txt state=touch'"
