--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,7 +10,7 @@
        - run: ls #
        - run: scp -r ./ansible "$SSH_USER@$SSH_HOST:/home/$SSH_USER" # for ansible from checkout
        - run: ssh $SSH_USER@$SSH_HOST "hostname"
-       - run: ssh $SSH_USER@$SSH_HOST "cd ansible; ansible all -m ping"
+       - run: ssh $SSH_USER@$SSH_HOST "cd ansible; ansible dev -m file -a 'path=/home/ubuntu/ubuntu_test.txt state=touch'"
 
  workflows:
    version: 2
